# cargo-hyperlight

./: Cargo.toml  README.md  build.rs  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
examples/guest/src/: main.rs
src/: cargo_cmd.rs  command.rs  lib.rs  main.rs  sysroot.rs  toolchain.rs
src/new/: mod.rs
src/new/guest/: _Cargo.toml  _main.rs
src/new/host/: _Cargo.toml  _main.rs
src/perf/: mod.rs  record.rs  report.rs
src/scaffold/: mod.rs
src/scaffold/guest/: _Cargo.toml  _main.rs
src/scaffold/host/: _main.rs
tests/: new.rs  scaffold.rs
