[package]
name = "cargo-hyperlight"
version = "0.1.9"
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/hyperlight-dev/cargo-hyperlight"
repository = "https://github.com/hyperlight-dev/cargo-hyperlight"
readme = "README.md"
description = "cargo subcommand to build hyperlight guest binaries"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
console = "0.16"
const_format = "0.2"
glob = "0.3"
libc = "0.2"
object = { version = "0.39", default-features = false, features = ["read", "elf"] }
os_str_bytes = "7.2.0"
regex = "1.12"
rustc-demangle = "0.1"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
which = { version = "8", features = ["regex"] }
